--- a/major-project-css/style.css
+++ b/major-project-css/style.css
@@ -277,3 +277,13 @@ a {
     border-radius: 50%;
     margin-top: -6px;
 }
+
+.p,.opacity {
+    display: inline-block;
+    font-weight: 700;
+    font-size: 1rem;
+}
+
+.opacity {
+    opacity: 0.7;
+}
